# JohnFontParser

./: .gitignore  CMakeLists.txt  linrun.sh  run.bat
Output/Debug/: output.txt
Source/: bmpMaker.c  bmpMaker.h  hashmap.c  hashmap.h  main.c  think.txt
Source/JohnPNG/: a.out  how.md  png.c  png.h
